--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~54.0.31",
     "expo-asset": "~12.0.12",
     "expo-audio": "~1.1.1",
+    "expo-localization": "^17.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
