--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#130701"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
